force-app/main/utilities/configuration-management/objects/Configuration__c/Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting will be used to control the automation / validation in the system</description>
    <label>Configuration</label>
</CustomObject>