force-app/main/utilities/configuration-management/objects/Configuration__c/fields/Are_Processes_Off__c.field-meta.xml
<CustomField>
    <fullName>Are_Processes_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox determines if the process builders in the system are turned off</description>
    <label>Are Processes Off</label>
    <type>Checkbox</type>
</CustomField>