force-app/main/utilities/configuration-management/objects/Configuration__c/fields/Are_Triggers_Off__c.field-meta.xml
<CustomField>
    <fullName>Are_Triggers_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to turn off the apex triggers in the system</description>
    <label>Are Triggers Off</label>
    <type>Checkbox</type>
</CustomField>