force-app/main/utilities/configuration-management/objects/Configuration__c/fields/Are_Validations_Off__c.field-meta.xml
<CustomField>
    <fullName>Are_Validations_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be used to turn off validation rules to allow saves of any records</description>
    <label>Are Validations Off</label>
    <type>Checkbox</type>
</CustomField>