force-app/main/utilities/configuration-management/objects/Configuration__c/fields/Is_Allowed_Delete__c.field-meta.xml
<CustomField>
    <fullName>Is_Allowed_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will allow the deletion of sobjects which cannot be controled by standard salesforce profiles (eg content documents / content versions)</description>
    <label>Is Allowed Delete</label>
    <type>Checkbox</type>
</CustomField>